--- a/index.html
+++ b/index.html
@@ -1,45 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Test Page: Don't Panic</title>
-    <meta charset="utf-8"/>
-    <style>
-      a {
-        color: red;
-      }
-      div {
-        border: 1px solid black;
-      }
-      div a {
-        color: green;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>I'm an h1</h1>
-    <ul>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-    </ul>
-    <h2>I'm an h2</h2>
-    <div>
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div>
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div>
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div>
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-  </body>
-</html>
+---
+layout: default
+---
